# rpi4_pc_app

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.json
ImageProcessing/: acquisition.cpp
clone_build/: Broadcaster.in  ConfigReader.in  IncludeSpdlog.in  QtCommunicator.in  QtCommunicatorPlugin.in  spdlog.in
gtest/: gtest.cc  main.cc  test.cc  test.h
qtest/: qtest.cc  qtest.h
src/: imagewidget.cc  imagewidget.h  main.cc  mainwindow.cc  mainwindow.h  server.cc  server.h  statuswidget.cc  statuswidget.h  structures.h
src/widgets/: imagewidget.cc  imagewidget.h  statuswidget.cc  statuswidget.h
test/: main.cc  test.cc  test.h  test_broadcaster.cc  test_broadcaster.h
